--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
     <section class="formulario">
         <div class="formbox">
             <h4>compre agora e entre para game</h4>
-            <form netlify
-                action="https://gmail.us14.list-manage.com/subscribe/post?u=cd63a10b8dcb02d7996afc660&amp;id=cb30ee1780&amp;f_id=00fd96e0f0"
-                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                target="_blank">
+           <form name="contact" method="POST" data-netlify="true">
                 <input type="email" id="email" name="EMAIL" placeholder="Email">
                 <select name="MOVIES" required>
                     <option selected hidden disabled required>Escolha o Game</option>
