--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="formulario">
         <div class="formbox">
             <h4>compre agora e entre para game</h4>
-           <form name="contact" method="POST" data-netlify="true" action="/pages/success">
+           <form name="contact" method="POST" data-netlify="true" action="/alert.html">
                 <input type="email" id="email" name="EMAIL" placeholder="Email" required>
                 <select name="MOVIES" required>
                     <option value="spiderman">Homem-Aranha</option>
