--- a/alert.html
+++ b/alert.html
@@ -1,14 +1,73 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>teste</title>
+    <title>submit</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            background-color: rgba(22, 20, 20, 0.95);
+
+
+        }
+        div {
+            max-width: 1000px;
+            background-color: rgb(2, 1, 13);
+            margin: auto;
+            color: white;
+            overflow: hidden;
+            font-family: 'VT323', monospace;
+            position: absolute;
+            top:30%;
+            left: 15%;
+            padding: 30px;
+            margin-bottom: 20px;
+            border-radius: 10px;
+            font-size: 20px
+
+        }
+        h1{
+            text-align: center;
+            color: red;
+            font-size: 50px;
+        }
+        footer{
+            text-align: center;
+            background-color: blue;
+            width: 80px;
+            padding: 5px;
+            border-radius: 10px;
+            box-shadow: 1px 1px 0px 0px white;
+            margin: auto;
+        }
+        a{
+            text-decoration: none;
+            font-weight: 900;
+            color: white;
+        }
+        footer:hover{
+            background-color: red;
+        }
+
+    </style>
 </head>
 
 <body>
-    <h1>PEDIDO CONFIRMADO</h1>
+    <div>
+        <h1>PEDIDO CONFIRMADO!!</h1>
+        <section>
+            <p>OBRIGADO PELA PREFERÊNCIA ENTRAREMOS EM CONTATO PELO EMAIL PARA CONFIRMAR A COMPRA E A EMISSÃO DO BOLETO
+                OU PIX.</p>
+        </section>
+        <footer>
+            <a href="index.html">VOLTAR</a>
+        </footer>
+    </div>
 </body>
 
 </html>
