--- a/alert.html
+++ b/alert.html
@@ -53,6 +53,11 @@
         footer:hover{
             background-color: red;
         }
+        @media screen and (max-width:600px) {
+            div{
+               max-width: 80vw;
+            }
+        }
 
     </style>
 </head>
