--- a/alert.html
+++ b/alert.html
@@ -53,12 +53,15 @@
         footer:hover{
             background-color: red;
         }
-        @media screen and (max-width:600px) {
-            div{
-               max-width: 80vw;
+       @media screen and (max-width:600px) {
+            body{
+                text-align: center;
+            }
+            div {
+                display:inline-block;
+                width: 100vw;
             }
         }
-
     </style>
 </head>
 
