--- a/alert.html
+++ b/alert.html
@@ -58,8 +58,19 @@
                 text-align: center;
             }
             div {
-                display:inline-block;
-                width: 100vw;
+            max-width: 1000px;
+            background-color: rgb(2, 1, 13);
+            margin: auto;
+            color: white;
+            overflow: hidden;
+            font-family: 'VT323', monospace;
+            position: absolute;
+            top:30%;
+            left: 15%;
+            padding: 30px;
+            margin-bottom: 20px;
+            border-radius: 10px;
+            font-size: 1vw
             }
         }
     </style>
