--- a/alert.html
+++ b/alert.html
@@ -16,15 +16,13 @@
 
         }
         div {
-            max-width: 1000px;
+            max-width: 500px;
             background-color: rgb(2, 1, 13);
             margin: auto;
             color: white;
             overflow: hidden;
             font-family: 'VT323', monospace;
-            position: absolute;
-            top:30%;
-            left: 15%;
+            position: static;
             padding: 30px;
             margin-bottom: 20px;
             border-radius: 10px;
