--- a/alert.html
+++ b/alert.html
@@ -63,12 +63,10 @@
             overflow: hidden;
             font-family: 'VT323', monospace;
             position: absolute;
-            top:30%;
-            left: 15%;
-            padding: 30px;
+            padding: 10px;
             margin-bottom: 20px;
             border-radius: 10px;
-            font-size: 1vw
+            font-size: 10px
             }
         }
     </style>
