--- a/alert.html
+++ b/alert.html
@@ -68,6 +68,8 @@
             border-radius: 10px;
             font-size: 10px
             }
+           footer{
+               margin-top: 15px;
         }
     </style>
 </head>
